레이아웃 디자인 변경
1. Appbar 적용
2. 전체 디자인 수정
3. Teacher chatText 엔터키로 전송되게 수정
4. Min Api Level 26 -> 23
5. Diary feed 틀만 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">What_Is_It?</string>
+    <string name="app_name">이게뭐야?</string>
 
     <!-- Sign In -->
     <string name="email">이메일</string>
