다이어리 더보기 구현
다이어리 리싸이클러뷰에서 카드뷰로 변경
다이어리 항목 클릭시 더보기 가능
다이어리 더보기에서 삭제, 공유버튼 구현 (작동은 안함)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,10 @@
     <item name="visible" type="id"/>
     <item name="masked" type="id"/>
 
+    <string name="title_activity_diary_more_view">더보기</string>
+    <string name="diary_delete">삭제</string>
+    <string name="diary_share">공유하기</string>
+
 </resources>
 
 
