--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,6 +47,9 @@
     <string name="pick_image_intent_chooser_title">이미지 선택</string>
     <string name="crop_image_activity_no_permissions">필수 권한이 없어서 취소합니다.</string>
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
 
 
